Adjusting the navbar width slightly to ensure it goes all the way to the edge on small screens

--- a/public/main.css
+++ b/public/main.css
@@ -158,7 +158,7 @@ main {
 /* Site navbar */
 #topNav {
   height: 4em;
-  width: 100vw;
+  width: 102vw;
   position: fixed;
   top: 0;
   left: 0;
